Fix font spacing

--- a/lecker.style.css
+++ b/lecker.style.css
@@ -33,7 +33,7 @@ body {
 
 h1 {
   font-family: Alisandra Demo, cursive;
-  font-size: 14vmin;
+  font-size: 13.5vmin;
   margin: 1vh;
 }
 
@@ -59,6 +59,6 @@ div {
   }
 
   p {
-    font-size: 15vmin;
+    font-size: 13vmin;
   }
 }
